make another savety file in fetchquran and fetchVoice and at home to

--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VITE_RAPID_API_KEY=6443a330b9mshca44e19b852f815p13be46jsn3253cb1de0ea
+VITE_RAPID_API_KEY_VOICE=d7d194e0admshe542491515a969dp172228jsn6684661478ca
